wip: #2 add footer 1+2 in corps

--- a/index.html
+++ b/index.html
@@ -30,7 +30,23 @@
             height: 100px;
             width: 100px;
         }
+        .content{
+            background-color: rgb(254, 200, 227);
+            height: 300px;
 
+        }
+        .footer-1{
+            background-color: rgb(202, 255, 195);
+            /* width: 100px; */
+        }
+        .footer-2{
+            background-color: rgb(220, 188, 255);
+            /* width: 200px; */
+        }
+        .footer{
+            background-color: rgb(179, 242, 255);
+            /* width: 300px; */
+        }
         div {
             background-color: rgb(253, 219, 236);
             height: 100px;
@@ -59,12 +75,13 @@
     <div class="content">
         <p>Content</p>
         < ? php get_content();?>
-    </div>
-    <div class="footer-1">
-        <p>Footer 1</p>
-    </div>
-    <div class="footer-2">
-        <p>Footer 2</p>
+
+            <div class="footer-1">
+                <p>Footer 1</p>
+            </div>
+            <div class="footer-2">
+                <p>Footer 2</p>
+            </div>
     </div>
     <div class="footer">
         <p>Footer</p>
