wip: #2 text-align center

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         .content{
             background-color: rgb(254, 200, 227);
             height: 300px;
-
+        }
+        h6 {
+            text-align: center;
         }
         .footer-1{
             background-color: rgb(202, 255, 195);
@@ -74,7 +76,7 @@
     </div>
     <div class="content">
         <p>Content</p>
-        < ? php get_content();?>
+        <h6>< ? php get_content();?></h6>
 
             <div class="footer-1">
                 <p>Footer 1</p>
