--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
     <div class="content">
         <p>Content</p>
         <h6>< ? php get_content();?></h6>
-
+        <aside>
+            <p> aside droite</p>
+        </aside>
             <div class="footer-1">
                 <p>Footer 1</p>
             </div>
