--- a/index.html
+++ b/index.html
@@ -30,25 +30,68 @@
             height: 100px;
             width: 100px;
         }
-        .content{
+
+        .content {
+
             background-color: rgb(254, 200, 227);
-            height: 300px;
+            width: 100%;
+            /* height: 300px; */
+            /* width: 60%;   */
+
         }
+
+        .body {
+            display: flex;
+            width: 100%;
+            justify-content: center;
+
+            /* align-items: stretch; */
+        }
+
+
+
+        .aside-gauche {
+            /* flex-basis: 100px;            */
+            height: 30px;
+            background-color: rgb(195, 227, 255);
+            width: 20%;
+        }
+
+        .content-1 {
+            width: 60%;
+            
+            /* flex-basis: 200px; */
+        }
+
+        .aside-droite {
+            /* float: left;
+            flex-basis: 100px;            */
+            background-color: rgb(195, 227, 255);
+            height: 30px;
+            width: 20%;
+        }
+
         h6 {
             text-align: center;
         }
-        .footer-1{
+
+        .footer-1 {
+            align-items: flex-end;
             background-color: rgb(202, 255, 195);
             /* width: 100px; */
         }
-        .footer-2{
+
+        .footer-2 {
+            align-items: flex-end;
             background-color: rgb(220, 188, 255);
             /* width: 200px; */
         }
-        .footer{
+
+        .footer {
             background-color: rgb(179, 242, 255);
             /* width: 300px; */
         }
+
         div {
             background-color: rgb(253, 219, 236);
             height: 100px;
@@ -75,17 +118,26 @@
         < ? php include 'menu.php' ;?>
     </div>
     <div class="content">
-        <p>Content</p>
-        <h6>< ? php get_content();?></h6>
-        <aside>
-            <p> aside droite</p>
-        </aside>
-            <div class="footer-1">
-                <p>Footer 1</p>
+        <div class="body">
+            <div class="aside-gauche">
+                <p> aside gauche</p>
             </div>
-            <div class="footer-2">
-                <p>Footer 2</p>
+            <div class="content-1">
+                <p>Content</p>
+                <h6>
+                    < ? php get_content();?>
+                </h6>
             </div>
+            <div class="aside-droite">
+                <p> aside droite</p>
+            </div>
+        </div>
+        <div class="footer-1">
+            <p>Footer 1</p>
+        </div>
+        <div class="footer-2">
+            <p>Footer 2</p>
+        </div>
     </div>
     <div class="footer">
         <p>Footer</p>
