wip: fix #2 footer position

--- a/index.html
+++ b/index.html
@@ -30,44 +30,37 @@
             height: 100px;
             width: 100px;
         }
+        .menu{
+            height:30px;
+            background-color: rgb(241, 156, 199);
 
+        }
         .content {
 
             background-color: rgb(254, 200, 227);
             width: 100%;
-            /* height: 300px; */
-            /* width: 60%;   */
-
         }
 
         .body {
             display: flex;
             width: 100%;
             justify-content: center;
-
-            /* align-items: stretch; */
+            height: 300px;
         }
 
-
-
         .aside-gauche {
-            /* flex-basis: 100px;            */
-            height: 30px;
+            height: 100%;
             background-color: rgb(195, 227, 255);
             width: 20%;
         }
 
         .content-1 {
             width: 60%;
-            
-            /* flex-basis: 200px; */
         }
 
         .aside-droite {
-            /* float: left;
-            flex-basis: 100px;            */
             background-color: rgb(195, 227, 255);
-            height: 30px;
+            height: 100%;
             width: 20%;
         }
 
@@ -76,25 +69,27 @@
         }
 
         .footer-1 {
-            align-items: flex-end;
             background-color: rgb(202, 255, 195);
             /* width: 100px; */
+            height: 100px;
         }
 
         .footer-2 {
-            align-items: flex-end;
             background-color: rgb(220, 188, 255);
             /* width: 200px; */
+            height: 100px;
         }
 
         .footer {
+            height: 100px;
+            bottom: 0;
             background-color: rgb(179, 242, 255);
             /* width: 300px; */
         }
 
         div {
             background-color: rgb(253, 219, 236);
-            height: 100px;
+            /* height: 100px; */
         }
 
         p {
@@ -130,7 +125,7 @@
             </div>
             <div class="aside-droite">
                 <p> aside droite</p>
-            </div>
+            </div>  
         </div>
         <div class="footer-1">
             <p>Footer 1</p>
